add logo to hero on homepage

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -79,3 +79,14 @@ h5 {
   font-family: "Lato", sans-serif;
   margin: 0;
 }
+
+.logo-container {
+  display: flex;
+  justify-content: center;
+  opacity: 0.9;
+}
+
+.hero-title {
+  font-family: "Lato", sans-serif !important;
+  opacity: 0.9;
+}
