add calendar stuff, add rules to event, add dropdown to event dates

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -102,3 +102,13 @@ h5 {
 .rbc-header {
   display: none;
 }
+
+.rbc-toolbar-label {
+  font-size: 2.5rem;
+  font-family: "Lato", sans-serif;
+}
+
+.date-menu {
+  text-align: right;
+  font-size: 1.0625rem;
+}
