--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -7,6 +7,7 @@ body {
 
 body {
   font-family: "Roboto", sans-serif;
+  background: #f7f7f7;
 }
 
 h1,
@@ -117,4 +118,8 @@ a.menu-item {
   color: whitesmoke;
   padding: 0 1rem;
   font-size: 1.1rem;
+}
+
+.form-style {
+  margin: 0.5rem;
 }
