--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap");
 
 html,
 body {
@@ -126,4 +127,8 @@ a.menu-item {
 
 .dropzone {
   border: 3px dashed grey;
+}
+
+.agendaDateRow {
+  font-size: 1.375rem;
 }
