--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -54,12 +54,6 @@ h5 {
   width: 100%;
 }
 
-.step-buttons {
-  margin-top: 1rem;
-  display: flex;
-  justify-content: center;
-}
-
 .logo-header {
   display: flex;
   /* flex-direction: column; */
@@ -125,10 +119,14 @@ a.menu-item {
   margin: 0.5rem;
 }
 
-.dropzone {
+.dashed-border {
   border: 3px dashed grey;
 }
 
 .agendaDateRow {
   font-size: 1.375rem;
+}
+
+.bottom-button {
+  padding-bottom: 2rem;
 }
