--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -143,3 +143,22 @@ a.menu-item {
   background: #ebebeb !important;
   border: 2px #3f50b5 solid !important;
 }
+
+.pdf-item {
+  border: 2px solid #3f50b5;
+  padding: 1rem;
+}
+
+.dropzone {
+  background-image: linear-gradient(
+    45deg,
+    #f7f7f7 25%,
+    #ffffff 25%,
+    #ffffff 50%,
+    #f7f7f7 50%,
+    #f7f7f7 75%,
+    #ffffff 75%,
+    #ffffff 100%
+  );
+  background-size: 56.57px 56.57px;
+}
