--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -187,3 +187,9 @@ a.menu-item {
   background: #eeeeee;
   transition: background 0.5s;
 }
+
+.human-check-submit {
+  display: flex;
+  align-items: center;
+  padding: 1.3rem 0;
+}
