add waiver option

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -140,7 +140,7 @@ a.menu-item {
 }
 
 .pdf-item {
-  border: 2px solid #3f50b5;
+  border: 2px solid #969696;
   padding: 1rem;
   margin-bottom: 1rem;
 }
