fix styling for entry top buttons

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -194,3 +194,11 @@ a.menu-item {
 #testSource {
   padding-left: 0.5rem;
 }
+
+.entry-toolbar {
+  display: flex;
+}
+
+.entry-toolbar > div {
+  margin: 5px;
+}
