well, I got the waiver validation to work, just not sure how to combine it with the rest

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -122,6 +122,10 @@ a.menu-item {
   border: 3px dashed grey;
 }
 
+.error-border {
+  border: 3px solid #d32f2f;
+}
+
 .agendaDateRow {
   font-size: 1.375rem;
 }
@@ -201,4 +205,8 @@ a.menu-item {
 
 .entry-toolbar > div {
   margin: 5px;
+}
+
+.MuiFormHelperText-root {
+  font-size: 14px !important;
 }
