--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -95,10 +95,6 @@ h5 {
   background: #e3e3e3 !important;
 }
 
-.Mui .active-nav {
-  text-decoration: underline !important;
-}
-
 .rbc-toolbar-label {
   font-size: 2.5rem;
   font-family: "Lato", sans-serif;
@@ -116,6 +112,55 @@ a.menu-item {
   color: whitesmoke;
   padding: 0 1rem;
   font-size: 1.1rem;
+  font-size: 20px;
+  line-height: 2.5rem;
+  font-weight: 500;
+  margin: 0.8rem;
+  text-decoration: none;
+}
+
+a.menu-item:hover {
+  text-decoration: none;
+}
+
+.active-nav {
+  border: #e1e1e1 solid 1px;
+  margin: 0 !important;
+  padding: 6px 19px !important;
+  text-decoration: none;
+}
+
+.hvr-outline-in {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+}
+.hvr-outline-in:before {
+  pointer-events: none;
+  content: "";
+  position: absolute;
+  border: #e1e1e1 solid 1px;
+  top: -16px;
+  right: -16px;
+  bottom: -16px;
+  left: -16px;
+  opacity: 0;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: top, right, bottom, left;
+  transition-property: top, right, bottom, left;
+}
+.hvr-outline-in:hover:before,
+.hvr-outline-in:focus:before,
+.hvr-outline-in:active:before {
+  top: -8px;
+  right: -8px;
+  bottom: -8px;
+  left: -8px;
+  opacity: 1;
 }
 
 .form-style {
