--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -115,7 +115,7 @@ a.menu-item {
   font-size: 20px;
   line-height: 2.5rem;
   font-weight: 500;
-  margin: 0.8rem;
+  margin: 0.2rem 0.8rem;
   text-decoration: none;
 }
 
