add disabled to sessions, begin to add logic for non checkbox selections, fix waiver select - inti value won't seem to work though

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -187,6 +187,10 @@ a.menu-item:hover {
   color: #171717 !important;
 }
 
+.Mui-disabled {
+  color: grey !important;
+}
+
 .session-selected {
   background: #edf5f4 !important;
   border: 2px #3f50b5 solid !important;
