--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -268,11 +268,7 @@ a.menu-item:hover {
   font-size: 14px !important;
 }
 
-.MuiBadge-anchorOriginTopRightRectangle {
-  top: 20px !important;
-  right: -10px !important;
-}
-
 .MuiBadge-badge {
   border-radius: 5px !important;
+  text-transform: uppercase;
 }
