--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -19,6 +19,18 @@ h5 {
   font-family: "Lato", sans-serif;
 }
 
+a,
+a:link,
+a:visited {
+  color: #2979ff;
+  text-decoration: none;
+}
+a:focus,
+a:hover {
+  color: #2979ff;
+  text-decoration: underline;
+}
+
 .hero {
   width: 100%;
   height: 70vh;
@@ -273,11 +285,17 @@ a.menu-item:hover {
   text-transform: uppercase;
 }
 
-.event-link, .event-link:visited {
-  text-decoration:none;
+.event-link,
+.event-link:visited {
+  text-decoration: none;
   color: #021533;
 }
 
 .event-link:hover {
- color: #1c54b2;
+  color: #1c54b2;
+}
+
+a,
+a:hover > .MuiButton-label {
+  text-decoration: none !important;
 }
