fix sylying issues, prepare to open accordian by query string

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -307,3 +307,10 @@ a:hover > .MuiButton-label {
 li > p {
   margin: 0.2rem;
 }
+
+.eventAccordion .MuiAccordionSummary-root {
+  background: #e6f0f7 !important;
+}
+.eventAccordion .MuiAccordionSummary-root:hover {
+  background: #c7dceb !important;
+}
