add pdfs to resources, fix link hover, fix entry link on index

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -25,10 +25,11 @@ a:visited {
   color: #2979ff;
   text-decoration: none;
 }
-a:focus,
-a:hover {
+
+a:hover,
+a:focus {
   color: #2979ff;
-  text-decoration: underline;
+  text-decoration: underline !important;
 }
 
 .hero {
