rejig waiver stuff to make it more clear, move age, show message if no age is selected

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -320,3 +320,12 @@ li > p {
   color: #4a4a4a;
   font-size: 12px;
 }
+
+.waiver-placeholder {
+  height: 120px;
+  border: red 5px dashed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 25px;
+}
